--- a/pipex/Makefile
+++ b/pipex/Makefile
@@ -5,8 +5,8 @@
 #                                                     +:+ +:+         +:+      #
 #    By: acabarba <acabarba@student.42Perpignan.    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/04/10 15:43:59 by acabarba          #+#    #+#              #
-#    Updated: 2024/04/10 15:43:59 by acabarba         ###   ########.fr        #
+#    Created: 2024/04/12 12:27:51 by acabarba          #+#    #+#              #
+#    Updated: 2024/04/12 12:27:51 by acabarba         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,29 +23,64 @@ OBJS = $(SRCS:.c=.o)
 OBJSUTILS = $(UTILS:.c=.o)
 
 # Flags de compilation
+CC = gcc
 CFLAGS = -Wall -Wextra -Werror
+RM = rm -f
 
 # Règle par défaut
-all: printhader printactionobj $(NAME) printend
+all: printhader printactionobj $(NAME) printactionobjok printend
+rapide: $(NAME)
 
 # Règle pour créer l'exécutable
 $(NAME): $(OBJS) $(OBJSUTILS)
-	???
+	@$(CC) $(CFLAGS) -o $(NAME) $(OBJS) $(OBJSUTILS)
 
 # Règle pour nettoyer les fichiers objets
 clean:
-	???
+	@$(RM) $(OBJS) $(OBJSUTILS)
 
 fclean: clean
-	???
+	@$(RM) $(NAME) $(NAMECHECK)
 	$(MAKE) printendclean
 
 re: fclean all
 
 # Règle d'affichage
 printhader: 
-	@sleep 1
-	???? ASCII ART
+	@sleep 0.1
+	@echo "                                                   "
+	@sleep 0.1
+	@echo "\033[94m ____________________________________ \033[0m"
+	@sleep 0.1
+	@echo "\033[94m|____________________________________|\033[0m"
+	@sleep 0.1
+	@echo "                                                   "
+	@sleep 0.1
+	@echo "  _____ _                 "
+	@sleep 0.1
+	@echo " |  __ (_)                "
+	@sleep 0.1
+	@echo " | |__) | _ __   _____  __"
+	@sleep 0.1
+	@echo " |  ___/ | |_ \ / _ \ \/ /"
+	@sleep 0.1
+	@echo " | |   | | |_) |  __/>  < "
+	@sleep 0.1
+	@echo " |_|   |_| .__/ \___/_/\_\"
+	@sleep 0.1
+	@echo "         | |              "
+	@sleep 0.1
+	@echo "         |_|              "
+	@sleep 0.1
+	@echo "                                                   "
+	@sleep 0.1
+	@echo "\033[94m ____________________________________ \033[0m"
+	@sleep 0.1
+	@echo "\033[94m|____________________________________|\033[0m"
+	@sleep 0.1
+	@echo "\033[97m                                      \033[0m"
+	@sleep 0.1
+	@echo "                                                   "
 	@sleep 1
 
 printactionobj:
@@ -67,23 +102,33 @@ printactionobjok:
 	@sleep 1
 
 printend:
+	@sleep 0.1
 	@echo " "
+	@sleep 0.1
 	@echo " "
-	@sleep 1
+	@sleep 0.1
 	@echo "   Utilitaire : \033[94m?????????????\033[0m est utilisable."
+	@sleep 0.1
 	@echo " "
+	@sleep 0.1
 	@echo " "
-	@sleep 1
+	@sleep 0.1
 
 printendclean:
+	@sleep 0.1
 	@echo " "
+	@sleep 0.1
 	@echo " "
-	@sleep 1
+	@sleep 0.1
 	@echo "   Tous les fichiers sont supprimé 🚮"
+	@sleep 0.1
 	@echo " "
+	@sleep 0.1
 	@echo " "
-	@sleep 1
+	@sleep 0.1
 	@echo "   \033[32mMerci d'avoir utilisé\033[0m \033[94m?????????????\033[0m"
+	@sleep 0.1
 	@echo " "
+	@sleep 0.1
 	@echo " "
-	@sleep 1
+	@sleep 0.1
