--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
 		"ft_printf.h": "c",
 		"libft.h": "c",
 		"pipex.h": "c",
-		"get_next_line.h": "c"
+		"get_next_line.h": "c",
+		"include.h": "c"
 	}
 }
